--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.13.2",
+    "@nuxt/image": "^1.8.0",
     "@nuxtjs/color-mode": "^3.4.4",
     "nuxt": "^3.13.0",
     "vue": "latest"
