--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@nuxt/content": "^2.13.2",
+    "@nuxt/eslint": "^0.5.6",
     "@nuxt/image": "^1.8.0",
     "@nuxtjs/color-mode": "^3.4.4",
     "nuxt": "^3.13.0",
     "vue": "latest"
   },
   "devDependencies": {
+    "@nuxt/eslint-config": "^0.5.6",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@tailwindcss/typography": "^0.5.15",
+    "eslint": "^9.10.0",
     "typescript": "^5.6.2",
     "vue-tsc": "^2.1.6"
   }
